# finiteelasticity_uniaxialextension

./: .gitignore  CMakeLists.txt  README.rst
src/: CMakeLists.txt
src/fortran/: CMakeLists.txt
